objects/Lookup_Filter__mdt.object
<CustomObject>
    <description>This custom metadata type stores the lookup filters for lookup fields and is used in LookupComponentController class for LookupComponent lightning component.
Note : Whenever any lookup filter is modified, the record for the same field should be updated here as well</description>
    <fields>
        <fullName>Additional_Filter_Condition__c</fullName>
        <label>Additional Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Condition__c</fullName>
        <label>Filter Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Field_API_Name__c</fullName>
        <label>Source Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Filter</label>
    <pluralLabel>Lookup Filters</pluralLabel>
</CustomObject>